force-app/main/default/objects/Adoption__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of money for virtual adoption</description>
    <label>Amount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>