force-app/main/default/objects/Adoption__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Animal adopter contact</description>
    <inlineHelpText>Animal adopter contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adoptions</relationshipLabel>
    <relationshipName>Adoptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>