force-app/main/default/objects/Adoption__c/validationRules/Amount_Must_Be_Greater_Than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Greater_Than_10</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 10</errorConditionFormula>
    <errorMessage>Amount must be greater than 10</errorMessage>
</ValidationRule>