force-app/main/default/objects/Adoption__c/validationRules/Virtual_Adoption_Minimal_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_Adoption_Minimal_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 10</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount cannot be less than 10</errorMessage>
</ValidationRule>